<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        tools:context=".AddExpense">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_payment_whopays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_pays"
                android:textColor="@color/colorBlack" />

            <Spinner
                android:id="@+id/spinner_payment_whopays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_payment_whopays"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner_payment_whopays"
                android:text="@string/how_much"
                android:textColor="@color/colorBlack" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_payment_howmuch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:hint="0,00"
                android:inputType="numberDecimal"
                android:textSize="26sp"
                android:autofillHints="" />

            <Spinner
                android:id="@+id/spinner_payment_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="26sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/for_who"
            android:textColor="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chbox_payment_forall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_all"
                android:textColor="@color/colorBlack" />

            <RadioGroup
                android:id="@+id/rbtng_payment_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/padding"
                android:paddingEnd="@dimen/padding">

                <RadioButton
                    android:id="@+id/rbtn_payment_ratio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/ratio" />

                <RadioButton
                    android:id="@+id/rbtn_payment_manually"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/manually" />

            </RadioGroup>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_payment_forallinfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ll_payment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/padding">

            <TextView
                android:id="@+id/tv_payment_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reason"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_payment_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_payment_reason"
                android:hint="@string/text_reason"
                android:inputType="textCapSentences"
                android:autofillHints="" />

            <TextView
                android:id="@+id/et_payment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/today"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_payment_reason" />

            <TextView
                android:id="@+id/et_payment_dandt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="•"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/et_payment_date"
                app:layout_constraintTop_toBottomOf="@id/et_payment_reason" />

            <TextView
                android:id="@+id/et_payment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/now"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/et_payment_dandt"
                app:layout_constraintTop_toBottomOf="@id/et_payment_reason" />

            <Button
                android:id="@+id/btn_payment_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="?attr/actionBarItemBackground"
                android:drawableStart="@drawable/round_check_black_36"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_payment_reason" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>