<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        tools:context=".EditExpense">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_payment_edit_whopays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_pays"
                android:textColor="@color/colorBlack" />

            <Spinner
                android:id="@+id/spinner_payment_edit_whopays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_payment_edit_whopays"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/tv_payment_howmuch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner_payment_edit_whopays"
                android:text="@string/how_much"
                android:textColor="@color/colorBlack" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_payment_edit_howmuch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:hint="0,00"
                android:inputType="numberDecimal"
                android:textSize="26sp" />

            <Spinner
                android:id="@+id/spinner_payment_edit_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="26sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_payment_edit_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/padding">

            <TextView
                android:id="@+id/tv_payment_edit_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reason"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_payment_edit_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_payment_edit_reason"
                android:hint="@string/text_reason"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/et_payment_edit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/today"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_payment_edit_reason" />

            <TextView
                android:id="@+id/et_payment_edit_dandt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="•"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/et_payment_edit_date"
                app:layout_constraintTop_toBottomOf="@id/et_payment_edit_reason" />

            <TextView
                android:id="@+id/et_payment_edit_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/now"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/et_payment_edit_dandt"
                app:layout_constraintTop_toBottomOf="@id/et_payment_edit_reason" />

            <Button
                android:id="@+id/btn_payment_edit_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="?attr/actionBarItemBackground"
                android:drawableLeft="@drawable/round_check_black_36"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_payment_edit_reason" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>